--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <!-- Content will be dynamically added here by JavaScript -->
       <h2 class="static-element">Static Element 1</h2>
       <h2 class="static-element">Static Element 2</h2>
+      <button onclick="{window.alert('inline code here... 💣')}">💣</button>
     </div>
     <!-- <script defer ="index.js"></script>  👈 classic way to import the JS file-->
   </body>
