fixing board and import ready

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
       <h2 class="static-element">Static Element 2</h2>
       <button onclick="{window.alert('inline code here... 💣')}">💣</button>
     </div>
-    <!-- <script defer ="index.js"></script>  👈 classic way to import the JS file-->
+    <!-- <script src="index.js"></script>  👈 classic way to import the JS file-->
   </body>
 </html>
